# whiplash

./: Cargo.toml  LICENSE  README.md  config.schema.json  specifications.md
.github/workflows/: rust.yml
examples/: anchored.toml  basic.toml  blacklist.toml  early_stop.toml  flags.toml  ignore_atoms.toml  include_for_match.toml  multi_item.toml  multiline.toml  record_start.toml  threshold.toml
src/: combine.rs  main.rs  tests.rs  tui.rs
tests/: cli.rs
