[package]
name = "whiplash"
version = "0.1.0"
edition = "2021"

[dependencies]
anstream = "0.6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
